--- a/app/src/main/res/layout/fragment_ground.xml
+++ b/app/src/main/res/layout/fragment_ground.xml
@@ -4,7 +4,9 @@
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_margin="@dimen/_5dp"
+    android:orientation="vertical"
+    android:padding="@dimen/_3dp">
 
     <LinearLayout
         android:id="@+id/searchLayout"
