--- a/app/src/main/res/layout/fragment_umpire_detail.xml
+++ b/app/src/main/res/layout/fragment_umpire_detail.xml
@@ -4,7 +4,9 @@
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_margin="@dimen/_4dp"
+    android:orientation="vertical"
+    android:padding="@dimen/_3dp">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -18,7 +20,6 @@
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_5dp"
                 android:orientation="horizontal"
                 android:padding="@dimen/_5dp">
 
@@ -35,7 +36,6 @@
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/_5dp"
                     android:layout_weight=".8"
                     android:orientation="horizontal"
                     android:padding="@dimen/_5dp">
@@ -60,9 +60,9 @@
                             android:id="@+id/ratingTxt"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:padding="@dimen/_5dp"
                             android:text="* * * * *"
                             android:textColor="@color/orange"
-                            android:padding="@dimen/_5dp"
                             android:textSize="@dimen/_20dp"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -72,8 +72,8 @@
                         android:id="@+id/fab"
                         android:layout_width="@dimen/_30dp"
                         android:layout_height="wrap_content"
-                        android:padding="@dimen/_5dp"
                         android:layout_gravity="center"
+                        android:padding="@dimen/_5dp"
                         android:src="@drawable/ic_favorite" />
 
 
@@ -86,7 +86,6 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_5dp"
                 android:padding="@dimen/_5dp"
                 android:text="General Details"
                 android:textColor="@color/black"
@@ -106,14 +105,12 @@
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/_5dp"
                     android:orientation="horizontal"
                     android:padding="@dimen/_5dp">
 
                     <LinearLayout
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.8"
                         android:orientation="vertical">
 
                         <LinearLayout
@@ -123,16 +120,18 @@
                             android:padding="@dimen/_5dp">
 
                             <TextView
-                                android:layout_width="wrap_content"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight=".3"
                                 android:text="Unique ID: "
                                 android:textSize="@dimen/_12dp"
                                 android:textStyle="bold" />
 
                             <TextView
                                 android:id="@+id/uniqueIdTxt"
-                                android:layout_width="wrap_content"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight=".7"
                                 android:text="456XyDFR"
                                 android:textSize="@dimen/_12dp"
                                 android:textStyle="bold" />
@@ -145,16 +144,18 @@
                             android:padding="@dimen/_5dp">
 
                             <TextView
-                                android:layout_width="wrap_content"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight=".3"
                                 android:text="Age: "
                                 android:textSize="@dimen/_12dp"
                                 android:textStyle="bold" />
 
                             <TextView
                                 android:id="@+id/ageTxt"
-                                android:layout_width="wrap_content"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight=".7"
                                 android:text="43 Years"
                                 android:textSize="@dimen/_12dp" />
                         </LinearLayout>
@@ -166,18 +167,20 @@
                             android:padding="@dimen/_5dp">
 
                             <TextView
-                                android:layout_width="wrap_content"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight=".3"
                                 android:text="Experience :"
                                 android:textSize="@dimen/_12dp"
                                 android:textStyle="bold" />
 
                             <TextView
                                 android:id="@+id/ExperienceTxt"
-                                android:layout_width="wrap_content"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight=".7"
                                 android:text="10 Years"
-                                android:textSize="7pt" />
+                                android:textSize="@dimen/_12dp" />
                         </LinearLayout>
 
                         <LinearLayout
@@ -187,16 +190,18 @@
                             android:padding="@dimen/_5dp">
 
                             <TextView
-                                android:layout_width="wrap_content"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight=".3"
                                 android:text="Odis umpired:: "
                                 android:textSize="@dimen/_12dp"
                                 android:textStyle="bold" />
 
                             <TextView
                                 android:id="@+id/OdieTxt"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight=".7"
                                 android:text="32"
                                 android:textSize="@dimen/_12dp" />
                         </LinearLayout>
@@ -208,16 +213,18 @@
                             android:padding="@dimen/_5dp">
 
                             <TextView
-                                android:layout_width="wrap_content"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight=".3"
                                 android:text="T20is umpired: "
                                 android:textSize="@dimen/_12dp"
                                 android:textStyle="bold" />
 
                             <TextView
                                 android:id="@+id/taskId"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight=".7"
                                 android:text="40"
                                 android:textSize="@dimen/_12dp" />
                         </LinearLayout>
@@ -229,16 +236,18 @@
                             android:padding="@dimen/_5dp">
 
                             <TextView
-                                android:layout_width="wrap_content"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight=".3"
                                 android:text="Role: "
                                 android:textSize="@dimen/_12dp"
                                 android:textStyle="bold" />
 
                             <TextView
                                 android:id="@+id/Roletxt"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight=".7"
                                 android:text="Cricket Umpire"
                                 android:textSize="@dimen/_12dp" />
                         </LinearLayout>
@@ -253,7 +262,6 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_5dp"
                 android:padding="@dimen/_5dp"
                 android:text="Umpires Information"
                 android:textColor="@color/black"
@@ -264,7 +272,6 @@
                 android:id="@+id/umpireInfoLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_5dp"
                 android:orientation="vertical"
                 android:padding="@dimen/_5dp" />
 
