--- a/app/src/main/res/layout/ground__row.xml
+++ b/app/src/main/res/layout/ground__row.xml
@@ -1,93 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="@dimen/_4dp"
+    app:cardCornerRadius="@dimen/_6dp"
+    app:cardElevation="@dimen/_5dp"
+    app:cardUseCompatPadding="true">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
+
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        app:cardCornerRadius="@dimen/_5dp"
-        app:cardElevation="@dimen/_5dp">
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/_90dp"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/_5dp"
+            android:layout_weight=".2"
+            android:src="@drawable/p4" />
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/_90dp"
-                android:layout_gravity="center"
-                android:layout_margin="@dimen/_5dp"
-                android:layout_weight=".3"
-                android:src="@drawable/p4" />
+            android:layout_margin="@dimen/_3dp"
+            android:layout_weight=".8"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_3dp"
-                android:layout_weight=".8"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="@dimen/_5dp">
-
-                    <TextView
-                        android:id="@+id/stadiunName"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_margin="@dimen/_5dp"
-                        android:layout_weight="1"
-                        android:padding="@dimen/_3dp"
-                        android:textSize="@dimen/_12dp"
-                        android:textStyle="bold" />
-
-                    <com.kredivation.aakhale.components.ASTButton
-                        android:id="@+id/avilableTxt"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:background="@drawable/round_boder_green"
-                        android:text="Available"
-                        android:textAlignment="center"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_10dp"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-
+                android:orientation="horizontal"
+                android:padding="@dimen/_5dp">
 
                 <TextView
-                    android:id="@+id/capacity"
-                    android:layout_width="match_parent"
+                    android:id="@+id/stadiunName"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight=".7"
                     android:padding="@dimen/_3dp"
-                    android:textSize="@dimen/_12dp" />
+                    android:textSize="@dimen/_12dp"
+                    android:textStyle="bold" />
 
-
-                <TextView
-                    android:id="@+id/addressTxt"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_5dp"
-                    android:padding="@dimen/_3dp"
-                    android:textSize="@dimen/_12dp" />
+                <com.kredivation.aakhale.components.ASTButton
+                    android:id="@+id/avilableTxt"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_weight=".3"
+                    android:background="@drawable/round_boder_green"
+                    android:text="Available"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_10dp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
 
+            <TextView
+                android:id="@+id/capacity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/_3dp"
+                android:textSize="@dimen/_12dp" />
+
+
+            <TextView
+                android:id="@+id/addressTxt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_3dp"
+                android:padding="@dimen/_3dp"
+                android:textSize="@dimen/_12dp" />
+
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
 
-</LinearLayout>
+    </LinearLayout>
+
+
+</android.support.v7.widget.CardView>
