--- a/app/src/main/res/layout/matchplay_row.xml
+++ b/app/src/main/res/layout/matchplay_row.xml
@@ -1,68 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/_5dp">
+    app:cardCornerRadius="@dimen/_5dp"
+    android:padding="@dimen/_5dp"
+    app:cardElevation="@dimen/_5dp"
+    app:cardUseCompatPadding="true">
 
 
-    <android.support.v7.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_5dp"
-        android:padding="@dimen/_5dp"
-        app:cardCornerRadius="@dimen/_5dp"
-        app:cardElevation="@dimen/_5dp"
-        app:cardUseCompatPadding="true">
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:padding="@dimen/_5dp">
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_weight="1"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:padding="@dimen/_5dp">
 
-
-            <LinearLayout
+            <TextView
+                android:id="@+id/tmeavsteam"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:padding="@dimen/_5dp">
+                android:padding="@dimen/_5dp"
+                android:text="IND VS AUS "
+                android:textSize="@dimen/_14dp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/tmeavsteam"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/_5dp"
-                    android:text="IND VS AUS "
-                    android:textSize="@dimen/_14dp"
-                    android:textStyle="bold" />
+            <TextView
+                android:id="@+id/stadiumaddress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/_3dp"
+                android:text="Noida Cricket Stadium"
+                android:textSize="@dimen/_12dp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/stadiumaddress"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/_3dp"
-                    android:text="Noida Cricket Stadium"
-                    android:textSize="@dimen/_12dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/date"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/_3dp"
-                    android:text="25 Aug 2018"
-                    android:textSize="@dimen/_12dp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/_3dp"
+                android:text="25 Aug 2018"
+                android:textSize="@dimen/_12dp"
+                android:textStyle="bold" />
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+
+    </LinearLayout>
 
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
