--- a/app/src/main/res/layout/sports_item_row.xml
+++ b/app/src/main/res/layout/sports_item_row.xml
@@ -4,7 +4,7 @@
     android:id="@+id/MainLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="@dimen/_55dp"
+    android:minHeight="@dimen/_70dp"
     android:orientation="vertical"
     app:cardCornerRadius="@dimen/_6dp"
     app:cardElevation="@dimen/_4dp"
@@ -15,24 +15,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:orientation="horizontal"
-        android:padding="@dimen/_8dp">
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/matchPerview"
-            android:layout_width="@dimen/_80dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight=".2"
+            android:minWidth="@dimen/_80dp"
+            android:minHeight="@dimen/_30dp"
             android:src="@drawable/ic_cricket_player" />
 
         <TextView
             android:id="@+id/teamneName"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_weight="1"
+            android:layout_weight=".8"
             android:text="Crickect"
-            android:paddingBottom="@dimen/_4dp"
             android:textColor="@color/black"
             android:textSize="@dimen/_12dp"
             android:textStyle="bold" />
