--- a/app/src/main/res/layout/teame_player_row.xml
+++ b/app/src/main/res/layout/teame_player_row.xml
@@ -1,61 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center">
+    android:layout_width="@dimen/_150dp"
+    android:layout_height="@dimen/_150dp"
+    android:layout_gravity="center"
+    card_view:cardCornerRadius="@dimen/_8dp"
+    card_view:cardElevation="@dimen/_5dp"
+    card_view:cardUseCompatPadding="true">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/cardViewLayout"
-        android:layout_width="@dimen/_150dp"
-        android:layout_height="@dimen/_150dp"
-        android:layout_gravity="center"
-        card_view:cardCornerRadius="@dimen/_8dp"
-        card_view:cardElevation="@dimen/_5dp"
-        card_view:cardUseCompatPadding="true">
 
-        <LinearLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/playerImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/playerImage"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:contentDescription="@string/app_name"
-                android:scaleType="fitXY" />
+            android:contentDescription="@string/app_name"
+            android:scaleType="fitXY" />
 
 
-            <com.kredivation.aakhale.components.ASTTextView
-                android:id="@+id/playeName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_3dp"
-                android:layout_marginTop="@dimen/_3dp"
-                android:background="@android:color/transparent"
-                android:maxLines="2"
-                android:padding="@dimen/_3dp"
-                android:text="Sachin Ram Semwal"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/_12dp"
-                android:textStyle="bold" />
+        <com.kredivation.aakhale.components.ASTTextView
+            android:id="@+id/playeName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_3dp"
+            android:layout_marginTop="@dimen/_3dp"
+            android:background="@android:color/transparent"
+            android:maxLines="2"
+            android:padding="@dimen/_3dp"
+            android:text="Sachin Ram Semwal"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/_12dp"
+            android:textStyle="bold" />
 
 
-            <com.kredivation.aakhale.components.ASTTextView
-                android:id="@+id/status"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_3dp"
-                android:maxLines="2"
-                android:text="PENDING"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/_12dp"
-                android:textStyle="bold" />
+        <com.kredivation.aakhale.components.ASTTextView
+            android:id="@+id/status"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_3dp"
+            android:maxLines="2"
+            android:text="PENDING"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/_12dp"
+            android:textStyle="bold" />
 
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
-</FrameLayout>
+    </LinearLayout>
+</android.support.v7.widget.CardView>
