--- a/app/src/main/res/menu/activity_dashboard_drawer.xml
+++ b/app/src/main/res/menu/activity_dashboard_drawer.xml
@@ -84,6 +84,11 @@
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
                 android:title="Notification" />
+
+            <item
+                android:id="@+id/postItem"
+                android:icon="@drawable/ic_menu_send"
+                android:title="Post List" />
         </menu>
     </item>
 
