--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -13,13 +13,414 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_dashboard"
-        app:menu="@menu/activity_dashboard_drawer" />
+        android:fitsSystemWindows="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <include
+                layout="@layout/nav_header_dashboard"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_110dp" />
+
+
+            <android.support.v4.widget.NestedScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+
+                    <TextView
+                        android:id="@+id/createTeame"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/_5dp"
+                        android:padding="@dimen/_5dp"
+                        android:text="Create Team"
+                        android:textColor="@color/orange"
+                        android:textSize="@dimen/_12dp" />
+
+
+                    <TextView
+                        android:id="@+id/aaAcademics"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/_5dp"
+                        android:padding="@dimen/_5dp"
+                        android:text="Add Academics"
+                        android:textColor="@color/orange"
+                        android:textSize="@dimen/_12dp" />
+
+
+                    <TextView
+                        android:id="@+id/addTournament"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/_5dp"
+                        android:padding="@dimen/_5dp"
+                        android:text="Add Tournament"
+                        android:textColor="@color/orange"
+                        android:textSize="@dimen/_12dp" />
+
+                    <TextView
+                        android:id="@+id/addScore"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/_5dp"
+                        android:padding="@dimen/_5dp"
+                        android:text="Add Score"
+                        android:textColor="@color/orange"
+                        android:textSize="@dimen/_12dp" />
+
+
+                    <TextView
+                        android:id="@+id/createMatch"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/_5dp"
+                        android:padding="@dimen/_5dp"
+                        android:text="Create Match"
+                        android:textColor="@color/orange"
+                        android:textSize="@dimen/_12dp" />
+
+
+                    <TextView
+                        android:id="@+id/addSportsMAtch"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/_5dp"
+                        android:padding="@dimen/_5dp"
+                        android:text="Add Spoerts Match"
+                        android:textColor="@color/orange"
+                        android:textSize="@dimen/_12dp" />
+
+
+                    <TextView
+                        android:id="@+id/createGround"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/_5dp"
+                        android:padding="@dimen/_5dp"
+                        android:text="Create Ground"
+                        android:textColor="@color/orange"
+                        android:textSize="@dimen/_12dp" />
+
+
+                    <TextView
+                        android:id="@+id/cretescorecard"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/_5dp"
+                        android:padding="@dimen/_5dp"
+                        android:text="Create Score Card"
+                        android:textColor="@color/orange"
+                        android:textSize="@dimen/_12dp" />
+
+
+                    <TextView
+                        android:id="@+id/scoreCard"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/_5dp"
+                        android:padding="@dimen/_5dp"
+                        android:text="Score Card"
+                        android:textColor="@color/orange"
+                        android:textSize="@dimen/_12dp" />
+
+                    <TextView
+                        android:id="@+id/createPost"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/_5dp"
+                        android:padding="@dimen/_5dp"
+                        android:text="Create Post"
+                        android:textColor="@color/orange"
+                        android:textSize="@dimen/_12dp" />
+
+
+                    <TextView
+                        android:id="@+id/adumpire"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/_5dp"
+                        android:padding="@dimen/_5dp"
+                        android:text="Add Umpires"
+                        android:textColor="@color/orange"
+                        android:textSize="@dimen/_12dp" />
+
+                    <TextView
+                        android:id="@+id/schedule"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/_5dp"
+                        android:padding="@dimen/_5dp"
+                        android:text="Schedule"
+                        android:textColor="@color/orange"
+                        android:textSize="@dimen/_12dp" />
+
+
+                    <TextView
+                        android:id="@+id/addTeam"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/_5dp"
+                        android:padding="@dimen/_5dp"
+                        android:text="Add Team"
+                        android:textColor="@color/orange"
+                        android:textSize="@dimen/_12dp" />
+
+
+                    <TextView
+                        android:id="@+id/chat"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/_5dp"
+                        android:padding="@dimen/_5dp"
+                        android:text="Chat"
+                        android:textColor="@color/orange"
+                        android:textSize="@dimen/_12dp" />
+
+                    <TextView
+                        android:id="@+id/Notification"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/_5dp"
+                        android:padding="@dimen/_5dp"
+                        android:text="Notification"
+                        android:textColor="@color/orange"
+                        android:textSize="@dimen/_12dp" />
+
+
+                    <TextView
+                        android:id="@+id/postItem"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/_5dp"
+                        android:padding="@dimen/_5dp"
+                        android:text="Post List"
+                        android:textColor="@color/orange"
+                        android:textSize="@dimen/_12dp" />
+
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_1dp"
+                        android:background="@color/orange" />
+
+                    <TextView
+                        android:id="@+id/sghareApp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/_5dp"
+                        android:padding="@dimen/_5dp"
+                        android:text="Share App"
+                        android:textColor="@color/orange"
+                        android:textSize="@dimen/_12dp" />
+
+
+                    <TextView
+                        android:id="@+id/rateApp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/_5dp"
+                        android:padding="@dimen/_5dp"
+                        android:text="Rate App"
+                        android:textColor="@color/orange"
+                        android:textSize="@dimen/_12dp" />
+
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_1dp"
+                        android:background="@color/orange" />
+
+                    <TextView
+                        android:id="@+id/privacy"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/_5dp"
+                        android:padding="@dimen/_5dp"
+                        android:text="Privacy Policy"
+                        android:textColor="@color/orange"
+                        android:textSize="@dimen/_12dp" />
+
+
+                    <TextView
+                        android:id="@+id/termUSe"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/_5dp"
+                        android:padding="@dimen/_5dp"
+                        android:text="Term OF USe"
+                        android:textColor="@color/orange"
+                        android:textSize="@dimen/_12dp" />
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_5dp"
+                        android:orientation="horizontal">
+
+                        <android.support.design.card.MaterialCardView
+                            android:id="@+id/profile"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            app:cardCornerRadius="@dimen/_5dp"
+                            app:cardElevation="@dimen/_3dp"
+                            app:cardUseCompatPadding="true">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical"
+                                android:padding="@dimen/_5dp">
+
+                                <com.kredivation.aakhale.components.CircleImageView
+                                    android:layout_width="@dimen/_25dp"
+                                    android:layout_height="@dimen/_25dp"
+                                    android:layout_gravity="center"
+                                    android:src="@drawable/ic_uuuser" />
+
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:gravity="center"
+                                    android:text="My Profile"
+                                    android:textAlignment="center"
+                                    android:textColor="@color/orange"
+                                    android:textSize="@dimen/_10dp"
+                                    android:textStyle="bold" />
+
+                            </LinearLayout>
+
+
+                        </android.support.design.card.MaterialCardView>
+
+
+                        <android.support.design.card.MaterialCardView
+                            android:id="@+id/setting"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            app:cardCornerRadius="@dimen/_5dp"
+                            app:cardElevation="@dimen/_3dp"
+                            app:cardUseCompatPadding="true">
+
+                            <LinearLayout
+                                android:id="@+id/Setting"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:orientation="vertical"
+                                android:padding="@dimen/_5dp">
+
+                                <com.kredivation.aakhale.components.CircleImageView
+                                    android:layout_width="@dimen/_25dp"
+                                    android:layout_height="@dimen/_25dp"
+                                    android:layout_gravity="center"
+                                    android:src="@drawable/ic_gear" />
+
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:gravity="center"
+                                    android:text="Setting"
+                                    android:textAlignment="center"
+                                    android:textColor="@color/orange"
+                                    android:textSize="@dimen/_10dp"
+                                    android:textStyle="bold" />
+
+                            </LinearLayout>
+
+                        </android.support.design.card.MaterialCardView>
+
+                        <android.support.design.card.MaterialCardView
+                            android:id="@+id/logout"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:background="@color/light_grey"
+                            app:cardCornerRadius="@dimen/_5dp"
+                            app:cardElevation="@dimen/_3dp"
+                            app:cardUseCompatPadding="true">
+
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical"
+                                android:padding="@dimen/_5dp">
+
+                                <com.kredivation.aakhale.components.CircleImageView
+                                    android:layout_width="@dimen/_25dp"
+                                    android:layout_height="@dimen/_25dp"
+                                    android:layout_gravity="center"
+                                    android:src="@drawable/ic_logooout" />
+
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:gravity="center"
+                                    android:text="Log Out"
+                                    android:textAlignment="center"
+                                    android:textColor="@color/orange"
+                                    android:textSize="@dimen/_10dp"
+                                    android:textStyle="bold" />
+
+                            </LinearLayout>
+
+                        </android.support.design.card.MaterialCardView>
+
+
+                    </LinearLayout>
+
+
+                </LinearLayout>
+            </android.support.v4.widget.NestedScrollView>
+
+        </LinearLayout>
+
+
+    </android.support.design.widget.NavigationView>
 
 </android.support.v4.widget.DrawerLayout>
