--- a/app/src/main/res/layout/teams_row.xml
+++ b/app/src/main/res/layout/teams_row.xml
@@ -42,14 +42,29 @@
                     android:orientation="vertical"
                     android:padding="@dimen/_5dp">
 
-                    <TextView
-                        android:id="@+id/name"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Noida Teams"
-                        android:textSize="@dimen/_14dp"
-                        android:textStyle="bold" />
+                        android:orientation="horizontal">
 
+                        <TextView
+                            android:id="@+id/name"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Noida Teams"
+                            android:textSize="@dimen/_14dp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/selectCheck"
+                            android:layout_width="@dimen/_25dp"
+                            android:layout_height="wrap_content"
+                            android:text="te"
+                            android:visibility="gone"
+                            android:textSize="@dimen/_20dp" />
+
+                    </LinearLayout>
 
                     <TextView
                         android:id="@+id/teamaddress"
